--- a/backend/package.json
+++ b/backend/package.json
@@ -32,9 +32,11 @@
     "celebrate": "^15.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.4",
     "package.json": "^2.0.1",
-    "validator": "^13.7.0"
+    "validator": "^13.7.0",
+    "winston": "^3.7.2"
   }
 }
