--- a/backend/package.json
+++ b/backend/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon app.js",
     "lint": "npx eslint .",
     "start": "node app.js",
-    "test": "jest"
+    "test": "jest",
+    "debug": "node --inspect-brk app.js"
   },
   "repository": {
     "type": "git",
